Fix menu z-index wrt codemirror

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -122,7 +122,7 @@ body {
       background-color: $light;
       min-width: 100px;
       padding: 12px 16px;
-      z-index: 1;
+      z-index: 3;
       font-size: 80%;
     }
     
